--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -34,7 +34,7 @@ Note: Each lecture is a topic, not a day of class.
 8. [Densities](07_densities.pdf)
 9. [Normal Density Calculations](08_normal_calculations.pdf)
 10. [Sampling Distributions](09_distribution_sample_mean.pdf)
-11. [Probability and Sets](10_probability_and_sets)
+11. [Probability and Sets](10_probability_and_sets.pdf)
 12. Proofs from Axioms of Probability
 13. Conditional Probability and Independence
 14. Discrete Random Variables
