publishes conditional prob and independence

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -36,7 +36,7 @@ Note: Each lecture is a topic, not a day of class.
 10. [Sampling Distributions](09_distribution_sample_mean.pdf)
 11. [Probability and Sets](10_probability_and_sets.pdf)
 12. [Proofs from Axioms of Probability](11_proofs_from_axioms.pdf)
-13. Conditional Probability and Independence
+13. [Conditional Probability and Independence](12_conditional_probability_independence.pdf)
 14. Discrete Random Variables
 15. Continuous Random Variables
 16. Moment Generating Functions
