--- a/lectures/10_probability_and_sets/probability_and_sets.Rnw
+++ b/lectures/10_probability_and_sets/probability_and_sets.Rnw
@@ -460,7 +460,7 @@ Two events $A$ and $B$ with this property are said to be \alert{mutually exclusi
 \item if $A \in \mathcal{A}$ then $A^c \in \mathcal{A}$
 \item If $A,B \in \mathcal{A}$ then $A \cap B \in \mathcal{A}$
 \item If $A,B \in \mathcal{A}$ then $A \cup B \in \mathcal{A}$
-\item If $A \in \mathcal{A}$ then $A \cap B \in \mathcal{A}$
+%\item If $A \in \mathcal{A}$ then $A \cap B \in \mathcal{A}$
 \end{itemize}
 
 
